# SQL-Usuario-Post

./: Makefile  README.md  pyproject.toml
.github/workflows/: test_push.yaml
Bruno/SQL- Servidor/: bruno.json  criar postagem.bru  criar usuário.bru  deletar post.bru  editar post.bru  lista posts.bru  lista todos posts de todos usuários.bru  lista usuários.bru  ver usuário específico.bru
app/: main.py
